add /v1/songs/batch functionality
